--- a/game/public/game.html
+++ b/game/public/game.html
@@ -140,8 +140,8 @@ Gamer.prototype = {
     build:function(){
         var t=Math.round(this.gameM.actSize.shCPl/4);
         var v=Math.floor(this.gameM.actSize.shCPl/4);
-        this.vid=$('<div style="border-radius: '+this.gameM.actSize.fontsize+'px;font-size:'+this.gameM.actSize.fontsize+'pt;position:relative; display:inline-block;vertical-align:top;width: '+(v-20)+'px;height: '+(t-20)+'px; background-color: '+this.fishka.colorF[this.fishka.numF-1]+';background-image: url(/resources/images/games/'+this.gameM.room.imageFolder+'/setka.png);margin: 5px;"><div style="color:'+this.fishka.colorText[this.fishka.numF-1]+';margin: 5px;">'+this.fishka.numF+' '+this.user.name+'</div></div>');
-        this.bord=$('<img style="border-radius: '+this.gameM.actSize.fontsize+'px;position:absolute; top:0; left:0;" src="/resources/images/games/'+this.gameM.room.imageFolder+'/ramka.png" width="'+(v-20)+'px" height="'+(t-20)+'px"/>');
+        this.vid=$('<div style="border-radius: '+this.gameM.actSize.fontsize+'px;font-size:'+this.gameM.actSize.fontsize+'pt;position:relative; display:inline-block;vertical-align:top;width: '+(v-20)+'px;height: '+(t-20)+'px; background-color: '+this.fishka.colorF[this.fishka.numF-1]+';background-image: url(/'+this.gameM.room.imageFolder+'/setka.png);margin: 5px;"><div style="color:'+this.fishka.colorText[this.fishka.numF-1]+';margin: 5px;">'+this.fishka.numF+' '+this.user.name+'</div></div>');
+        this.bord=$('<img style="border-radius: '+this.gameM.actSize.fontsize+'px;position:absolute; top:0; left:0;" src="/'+this.gameM.room.imageFolder+'/ramka.png" width="'+(v-20)+'px" height="'+(t-20)+'px"/>');
         this.vid.append(this.bord);
         this.moneyV=$('<div style="color:'+this.fishka.colorText[this.fishka.numF-1]+';margin: 5px;">Деньги: '+this.user.money+'</div>');
         this.penaltyV=$('<div style="color:'+this.fishka.colorText[this.fishka.numF-1]+';margin: 5px;">Штраф: '+this.user.penalty+'</div>');
@@ -184,7 +184,7 @@ Card.prototype = {
         }
         this.infocard=$('<div class="infocard" style="position: absolute; z-index: 40; top: 0;left: 0;width:'+this.w+'px;height:'+this.h+'px;">').append('<input type="hidden" value="'+this.ind+'"/>');
         //'height="'+size.shBc+'px" width="auto"'
-        var img=$('<img src="/resources/images/games/'+this.gameM.room.imageFolder+'/'+this.obj.image+'"/>').css('width',this.w+'px');
+        var img=$('<img src="/'+this.gameM.room.imageFolder+'/'+this.obj.image+'"/>').css('width',this.w+'px');
         this.vid=$('<div style="position:relative;text-aligne:center;">').css('float','left').css('height',this.h+'px').append(img).append(this.infocard);
         this.poleForFishka=$('<div style="display:inline-block;vertical-align: middle;"></div>');
         this.vid.append($('<div style="text-align: center;position:absolute;z-index:30;top:0;left:0;width:'+this.w+'px;height:'+this.h+'px;">').append(this.poleForFishka).append('<div style="display:inline-block;height:'+this.h+'px;vertical-align:middle;width:0;">'));
@@ -198,7 +198,7 @@ Card.prototype = {
         }
         var info=$('<div style="color:white;font-size:'+this.gameM.actSize.fontsize+'pt;position: absolute; z-index: -5; top: 0;left: 0;width:100%;height:100%;">').append(this.infoFirm);
         if(this.obj.price){
-            this.infoMoneyBG=$('<div style="z-index:-5;position:relative;background-image: url(/resources/images/games/'+this.gameM.room.imageFolder+'/setka.png);">').css('height',Math.round(this.h/4)+'px').css('width',this.w+'px');
+            this.infoMoneyBG=$('<div style="z-index:-5;position:relative;background-image: url(/'+this.gameM.room.imageFolder+'/setka.png);">').css('height',Math.round(this.h/4)+'px').css('width',this.w+'px');
             this.infoMoney=$('<div style="position: absolute; z-index: -2; top: 0;left: 0;text-align: center; vertical-align: middle;display: table-cell;">');
             this.infoMoney.css('height',Math.round(this.h/4)+'px').css('width',this.w+'px').text(this.obj.price);
             this.infomoneyBG.append(this.infomoney);
@@ -367,7 +367,7 @@ Card.prototype = {
             imgS='zvezd02.png';
             razm=Math.round(razm*1.5);
         }
-        this.poleStar.append('<img src="/resources/images/games/'+this.gameM.room.imageFolder+'/'+imgS+'" width="'+razm+'px" height="auto"/>');
+        this.poleStar.append('<img src="/'+this.gameM.room.imageFolder+'/'+imgS+'" width="'+razm+'px" height="auto"/>');
         this.recalculatePenalty();
     },
     putFilial:function(){
@@ -376,7 +376,7 @@ Card.prototype = {
             this.poleStar.empty();
             imgS='zvezd02.png';
             for(var i=0;i<4;i++){
-                this.poleStar.append('<img src="/resources/images/games/'+this.gameM.room.imageFolder+'/'+imgS+'" width="'+razm+'px" height="auto"/>');
+                this.poleStar.append('<img src="/'+this.gameM.room.imageFolder+'/'+imgS+'" width="'+razm+'px" height="auto"/>');
             }
         }else{
             this.poleStar.find('img:first').remove();
@@ -410,10 +410,10 @@ var gameMonopoly={
         var t=this.migEl;
         this.migEl=el;
         if(t!=null) {
-//            t.attr('src', '/resources/images/games/' + this.room.imageFolder + '/ramka.png');
+//            t.attr('src', '/' + this.room.imageFolder + '/ramka.png');
             t.fadeIn('slow');
         }
-//        this.migEl.attr('src','/resources/images/games/'+this.room.imageFolder+'/ramka.gif');
+//        this.migEl.attr('src','/'+this.room.imageFolder+'/ramka.gif');
     },
     blink:function(){
         var thisEl=this;
@@ -746,7 +746,7 @@ var gameMonopoly={
             leftCard.append(this.buildCard(listCardObj,i,'left'));
         }
         centerLine.append(leftCard);
-        centerLine.append('<div id="centerPl" class="centerPlace" style="position:relative;width:'+size.shCPl+'px;height:'+size.shCPl+'px;display: inline; float: left;"><img src="/resources/images/games/'+this.room.imageFolder+'/'+this.room.imageCenter+'" width="'+size.shCPl+'px" height="'+size.shCPl+'px"/></div>');
+        centerLine.append('<div id="centerPl" class="centerPlace" style="position:relative;width:'+size.shCPl+'px;height:'+size.shCPl+'px;display: inline; float: left;"><img src="/'+this.room.imageFolder+'/'+this.room.imageCenter+'" width="'+size.shCPl+'px" height="'+size.shCPl+'px"/></div>');
         var rightCard=$('<div class="rightCard" style="width:'+size.shBc+'px;float:left;">');
         for(var i=listCardObj.length/4+1;i<=(listCardObj.length/4+gC);i++){
             rightCard.append(this.buildCard(listCardObj,i,'right'));
@@ -819,7 +819,7 @@ var gameMonopoly={
             }
             this.butPanel.append(this.buttons[b]);
         }
-        this.imgName='/resources/images/games/'+this.room.imageFolder+'/';
+        this.imgName='/'+this.room.imageFolder+'/';
         this.butPanel.append(this.butGE);
         this.panelSelectFirm=$('<div style="background:black;position:absolute;z-index:10;top:0;left:0;width:'+this.actSize.shCPl+'px;height:'+(t*2-2)+'px;"></div>').hide();
         this.panelAuction=$('<div style="background:black;position:absolute;z-index:10;top:0;left:0;width:'+this.actSize.shCPl+'px;height:'+(t*2-2)+'px;"></div>').hide();
