--- a/game/public/game.html
+++ b/game/public/game.html
@@ -740,6 +740,7 @@ var gameMonopoly={
             }
             topline.append(this.buildCard(listCardObj,i,p));
         }
+        alert('1');
         var centerLine=$('<div style="display: inline; clear: left;">');
         var leftCard=$('<div class="leftCard" style="width:'+size.shBc+'px;clear:left;float:left;">');
         for(var i=listCardObj.length-1;i>=(listCardObj.length-gC);i--){
