--- a/game/public/game.html
+++ b/game/public/game.html
@@ -474,6 +474,10 @@ var gameMonopoly={
                     for(var i=0;i<data.listAction.length;i++) {
                         var gamerA = thisEl.getUserByName(data.listAction[i].user);
                         // thisEl.loginfo(data.listAction[i].infoAction+" "+data.listAction[i].user);
+                        if (gamerA == null) {
+                             console.log("loadgamedata :" + data.listAction[i].user);
+                             console.log("loadgamedata2 :" + JSON.stringify(data.listUser));
+                        }
                         if (gamerA != null) {
                             gamerA.user = thisEl.getUserByNameL(data.listAction[i].user, data.listUser);
                             gamerA.updateVid();
