--- a/game/public/game.html
+++ b/game/public/game.html
@@ -12,6 +12,8 @@
     <script type="text/javascript">
            YConsole.activate();
            console.log("first intercepted log.");
+           YConsole.MAX_LOG_STR_LENGTH=1000;
+           YConsole.MAX_LOG_ARRAY_LENGTH=80;
            YConsole.docking="bottom";
            YConsole.show();
     </script>
