--- a/game/public/game.html
+++ b/game/public/game.html
@@ -641,6 +641,7 @@ var gameMonopoly={
                 return this.gamers[y];
             }
         }
+        return null;
     },
     getUserByNameL:function(name, listUser){
         for(var y=0;y<listUser.length;y++){
