--- a/game/public/gameroom.html
+++ b/game/public/gameroom.html
@@ -189,7 +189,7 @@
                                    if(data[i].maxCountUser>data[i].roomUsers.length){
                                          var waiterEl = $('<div>Ожидаем игроков...</div>');
                             
-                                          elD.append(buttonD);
+                                          elD.append(waiterEl);
                                     }else{
                                    var buttonD = $('<a href="/game/'+data[i].nameRoom+'">Перейти в игру</a>');
                             
