--- a/game/public/game.html
+++ b/game/public/game.html
@@ -1080,7 +1080,7 @@ var gameMonopoly={
         var datat="json";
         this.numError=0;
 
-        console.log('actionsUser');
+        console.log('actionsUser' + actions);
         jQuery.ajaxSettings.traditional = false;
         if (actions == 'PUT_FIRM' | actions == 'REDEEM_FIRM' | actions == 'BUY_FILIAL' | actions == 'SELL_FILIAL'){
             if (this.listSelectFirm.length == 0) {
@@ -1122,9 +1122,10 @@ var gameMonopoly={
         }
         this.hideAllBut();
         this.keyLoad=0;
-        console.log('actionsUser:'+JSON.stringify(datas));
+
         datas.action = actions.toLowerCase();
         datas.roomName = thisEl.room.roomName;
+        console.log('actionsUser:'+JSON.stringify(datas));
         $.ajax({
             url: "/games/monopoly/actions",
             dataType : datat,
