--- a/game/public/game.html
+++ b/game/public/game.html
@@ -110,7 +110,7 @@ var langEn={
     GAME_CLOSE:"Game close",
     SEND_MESSAGE:"Send",
     CANCAL:"Cancal",
-    YOURS_WIN:"YOURS WIN!!!!"
+    YOURS_WIN:"YOU WIN!!!!"
 }
 
 var Fishka=Class.create();
