--- a/game/public/game.html
+++ b/game/public/game.html
@@ -399,7 +399,7 @@ var gameMonopoly={
     buttons:[],
     listSelectFirm:[],
     listSelectFirm2:[],
-    timeLoad:2000,
+    timeLoad:10000,
     curentUser:null,
     init:function(lang){
         if(lang){
@@ -454,6 +454,7 @@ var gameMonopoly={
             type: "GET"
         }).done(function(data) {
             if(data!=null) {
+                 console.log(JSON.strringify(data));
                 if(this.keyLoad!=0){
                     if(thisEl.gamers.length!=thisEl.room.maxCountUser){
                         if(data.listAction.length>0){
