--- a/game/public/game.html
+++ b/game/public/game.html
@@ -146,7 +146,7 @@ Gamer.prototype = {
         this.vid=$('<div style="border-radius: '+this.gameM.actSize.fontsize+'px;font-size:'+this.gameM.actSize.fontsize+'pt;position:relative; display:inline-block;vertical-align:top;width: '+(v-20)+'px;height: '+(t-20)+'px; background-color: '+this.fishka.colorF[this.fishka.numF-1]+';background-image: url(/'+this.gameM.room.imageFolder+'/setka.png);margin: 5px;"><div style="color:'+this.fishka.colorText[this.fishka.numF-1]+';margin: 5px;">'+this.fishka.numF+' '+this.user.name+'</div></div>');
         this.bord=$('<img style="border-radius: '+this.gameM.actSize.fontsize+'px;position:absolute; top:0; left:0;" src="/'+this.gameM.room.imageFolder+'/ramka.png" width="'+(v-20)+'px" height="'+(t-20)+'px"/>');
         this.vid.append(this.bord);
-        if(this.user.money==null)alert('error build');
+        //if(this.user.money==null)alert('error build');
         this.moneyV=$('<div style="color:'+this.fishka.colorText[this.fishka.numF-1]+';margin: 5px;">Деньги: '+this.user.money+'</div>');
         this.penaltyV=$('<div style="color:'+this.fishka.colorText[this.fishka.numF-1]+';margin: 5px;">Штраф: '+this.user.penalty+'</div>');
         if(this.user.penalty==0){
@@ -157,7 +157,7 @@ Gamer.prototype = {
         this.updateVid();
     },
     updateVid:function(){
-        if(this.user.money==null)alert('error update');
+        //if(this.user.money==null)alert('error update');
         this.moneyV.text("Деньги: "+this.user.money);
         if(this.user.penalty!=0){
             this.penaltyV.text("Штраф: "+Math.abs(this.user.penalty));
@@ -460,7 +460,7 @@ var gameMonopoly={
                  console.log(JSON.stringify(data));
                 if(this.keyLoad!=0){
                     if(thisEl.gamers.length!=thisEl.room.maxCountUser){
-                        alert('error count of gamers');
+                        //alert('error count of gamers');
                         if(data.listAction.length>0){
                             var t=false;
                             for(var i=0;i<data.listAction.length;i++){
@@ -490,7 +490,7 @@ var gameMonopoly={
                         }
                         if (gamerA != null) {
                             gamerA.user = thisEl.getUserByNameL(data.listAction[i].user, data.listUser);
-                            if(gamerA.user.money==null)alert(JSON.stringfy(gamerA.user));
+                            //if(gamerA.user.money==null)alert(JSON.stringfy(gamerA.user));
                             gamerA.updateVid();
                             thisEl.loginfo('user:' + gamerA.user.name + ' - ' + data.listAction[i].action+'('+data.listAction[i].infoAction+')');
                             if (data.listAction[i].action == "THROW_CUBE") {
@@ -503,7 +503,7 @@ var gameMonopoly={
                             if (data.listAction[i].action == "CHANGE_USER") {
                                 var gamer = thisEl.getUserByName(data.listAction[i].infoAction);
                                 gamer.user = thisEl.getUserByNameL(data.listAction[i].infoAction, data.listUser);
-                                if(gamer.user.money==null)alert(JSON.stringfy(gamer));                              
+                                //if(gamer.user.money==null)alert(JSON.stringfy(gamer));                              
                                 gamer.updateVid();
                             }
                             if (data.listAction[i].action == "BUY_FIRM") {
@@ -518,7 +518,7 @@ var gameMonopoly={
                             if (data.listAction[i].action == "RECEIVE_INCOME") {
                                 var gamer = thisEl.getUserByName(data.listAction[i].infoAction);
                                 gamer.user = thisEl.getUserByNameL(data.listAction[i].infoAction);
-                                if(gamer.user.money==null)alert(JSON.stringfy(gamer));
+                                //if(gamer.user.money==null)alert(JSON.stringfy(gamer));
                                 gamer.updateVid();
                             }
                             if (data.listAction[i].action == "PUT_FIRM") {
