--- a/game/public/game.html
+++ b/game/public/game.html
@@ -1083,7 +1083,7 @@ var gameMonopoly={
         var datat="json";
         this.numError=0;
 
-        console.log('actionsUser' + actions);
+        console.log('actionsUser send ' + JSON.stringfy(actions));
         jQuery.ajaxSettings.traditional = false;
         if (actions == 'PUT_FIRM' | actions == 'REDEEM_FIRM' | actions == 'BUY_FILIAL' | actions == 'SELL_FILIAL'){
             if (this.listSelectFirm.length == 0) {
@@ -1116,6 +1116,7 @@ var gameMonopoly={
         }
         if (actions == 'SEND_MESSAGE'){
             datas = {'message':  this.messageField.val()};
+            
             this.messageField.val("");
             typeReq="POST";
         }
@@ -1128,7 +1129,7 @@ var gameMonopoly={
         if(datas==null){datas={};}
         datas.action = actions.toLowerCase();
         datas.roomName = thisEl.room.roomName;
-        console.log('actionsUser1 : '+JSON.stringify(datas));
+        console.log('send actions of User : '+JSON.stringify(datas));
         $.ajax({
             url: "/games/monopoly/actions",
             dataType : datat,
